--- a/src/GUI/PathsDialog.ui
+++ b/src/GUI/PathsDialog.ui
@@ -83,20 +83,7 @@
       <property name="spacing">
        <number>0</number>
       </property>
-      <item row="1" column="0">
-       <spacer name="horizontalSpacer_3">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>567</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item row="1" column="1">
+      <item row="1" column="2">
        <widget class="QToolButton" name="addSceneryPath">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -115,10 +102,7 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="0" colspan="3">
-       <widget class="QListWidget" name="sceneryPathsList"/>
-      </item>
-      <item row="1" column="2">
+      <item row="1" column="3">
        <widget class="QToolButton" name="removeSceneryPath">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -136,6 +120,29 @@
          <string>-</string>
         </property>
        </widget>
+      </item>
+      <item row="1" column="1">
+       <spacer name="horizontalSpacer_3">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>567</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>Drag to re-order</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0" colspan="4">
+       <widget class="QListWidget" name="sceneryPathsList"/>
       </item>
      </layout>
     </widget>
@@ -246,10 +253,7 @@
       <property name="spacing">
        <number>0</number>
       </property>
-      <item row="0" column="0" colspan="3">
-       <widget class="QListWidget" name="aircraftPathsList"/>
-      </item>
-      <item row="1" column="0">
+      <item row="1" column="1">
        <spacer name="horizontalSpacer_4">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
@@ -263,6 +267,25 @@
        </spacer>
       </item>
       <item row="1" column="2">
+       <widget class="QToolButton" name="addAircraftPath">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>20</width>
+          <height>20</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>+</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="3">
        <widget class="QToolButton" name="removeAircraftPath">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -281,24 +304,15 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
-       <widget class="QToolButton" name="addAircraftPath">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="minimumSize">
-         <size>
-          <width>20</width>
-          <height>20</height>
-         </size>
-        </property>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label_3">
         <property name="text">
-         <string>+</string>
+         <string>Drag to re-order</string>
         </property>
        </widget>
+      </item>
+      <item row="0" column="0" colspan="4">
+       <widget class="QListWidget" name="aircraftPathsList"/>
       </item>
      </layout>
     </widget>
